tests/golden/type_errors/named_struct_duplicate_decl.cd
struct Person { name: string }
struct Person { age: number }
